[tool.poetry]
name = "pyspark-column-pipelines"
version = "0.1.0"
description = ""
authors = ["Vince Forgione <vince.4gione@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "3.2.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"
pylint = "^2.13.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
bandit = {extras = ["toml"], version = "^1.7.4"}
safety = "^1.10.3"
Jinja2 = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = [
  "B101",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.pylint.master]
disable = [
  "missing-module-docstring",
  "too-many-lines",
  "too-few-public-methods",
  "redefined-builtin",
]

[tool.pylint.basic]
good-names = [
  "_",
  "f",
  "n",
  "x",
  "df",
  "fh",
  "fn",
  "tz",
]

[tool.pytest.ini_options]
addopts = [
  "--tb=native",
  "--cov=pyspark_column_pipelines",
  "--cov-report=term-missing",
]
